fix: wrap title on small screens

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -83,6 +83,7 @@ h1 a:hover {
   font-family: sans-serif;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
+  word-wrap: break-word;
 }
 
 .post-wrapper h1 {
